--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Hi</h1>
+<h1>Test Samples</h1>
+<ul>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-normal-sample.html">Normal Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-grouping-sample.html">Grouping Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-filterbar-sample.html">Filterbar Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-dialog-edit-sample.html">Dialog Edit Grid Sample</a></li>
+</ul>
