--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -6,11 +6,11 @@
     <meta name="author" content="Syncfusion">
     <script src="https://ej2.syncfusion.com/javascript/demos/grid/default/datasource.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css">
-    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script> 
     <script src="ej2.min.js"></script>
-    <script src="data.js" type="text/javascript"></script> 
+    <script src="data.js" type="text/javascript"></script>
+    <link href="https://cdn.syncfusion.com/ej2/20.2.44/material.css" rel="stylesheet" />
 </head>
 <body>
         <div id="Grid"></div>        
