--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -16,7 +16,7 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Toolbar, ej.grids.Group, ej.grids.Sort);
+    ej.grids.Grid.Inject(ej.grids.Toolbar, ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Edit);
     
     var data = new ej.data.DataManager({
     url: 'https://services.odata.org/V4/Northwind/Northwind.svc/Orders/',
@@ -26,6 +26,11 @@
     var grid = new ej.grids.Grid({
     dataSource: data,
     height: 400,
+    editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
+    allowFiltering: true,
+    filterSettings: { type:'Excel' },
+    allowSorting: true,
+    allowGrouping: true,
     columns: [
             { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
             { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
