--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -26,6 +26,7 @@
     var grid = new ej.grids.Grid({
     dataSource: data,
     height: 400,
+    loadingIndicator: { indicatorType: 'Shimmer' },
     editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
     allowFiltering: true,
     filterSettings: { type:'Excel' },
