--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -32,6 +32,7 @@
     filterSettings: { type:'Excel' },
     allowSorting: true,
     allowGrouping: true,
+    toolbar: ['Add', 'Edit', 'Update', 'Delete', 'Cancel'],
     columns: [
             { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
             { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
