--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -11,6 +11,15 @@
     <script src="ej2.min.js"></script>
     
     <link href="https://cdn.syncfusion.com/ej2/20.2.44/material.css" rel="stylesheet" />
+    
+    <style>
+      .e-grid .e-mask {
+      background-color: rgba(0, 0, 0, 0.1);
+      display: inline-block;
+      height: 10px;
+      width: 80%;
+      }
+    </style>
 </head>
 <body>
         <div id="Grid"></div>        
