--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -25,7 +25,7 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Toolbar, ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Edit);
+    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter);
     
     var data = new ej.data.DataManager({
     url: 'https://services.odata.org/V4/Northwind/Northwind.svc/Orders/',
@@ -36,12 +36,10 @@
     dataSource: data,
     height: 400,
     loadingIndicator: { indicatorType: 'Shimmer' },
-    editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
     allowFiltering: true,
     filterSettings: { type:'Excel' },
     allowSorting: true,
     allowGrouping: true,
-    toolbar: ['Add', 'Edit', 'Update', 'Delete', 'Cancel'],
     columns: [
             { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
             { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
