--- a/grid-overall-sample.html
+++ b/grid-overall-sample.html
@@ -28,8 +28,8 @@
     ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter);
     
     var data = new ej.data.DataManager({
-    url: 'https://services.odata.org/V4/Northwind/Northwind.svc/Orders/',
-    adaptor: new ej.data.ODataV4Adaptor()
+    url: 'https://js.syncfusion.com/demos/ejServices/Wcf/Northwind.svc/Orders/',
+    adaptor: new ej.data.ODataAdaptor()
     });
     
     var grid = new ej.grids.Grid({
