--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>Test Samples</h1>
 <ul>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample.html">Sort, Filter, Group Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Sort, Filter, Group, Edit Using Local Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-grouping-sample.html">Grouping Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-filterbar-sample.html">Filterbar Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-dialog-edit-sample.html">Dialog Edit Grid Sample</a></li>
