--- a/grid-overall-sample-local.html
+++ b/grid-overall-sample-local.html
@@ -26,22 +26,23 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter);
+    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Page);
     
     var grid = new ej.grids.Grid({
-    dataSource: data,
-    height: 400,
-    loadingIndicator: { indicatorType: 'Shimmer' },
-    allowFiltering: true,
-    filterSettings: { type:'Excel' },
-    allowSorting: true,
-    allowGrouping: true,
-    columns: [
-            { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
-            { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
-            { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
-            { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
-    ],
+        dataSource: data,
+        height: 400,
+        loadingIndicator: { indicatorType: 'Shimmer' },
+        allowFiltering: true,
+        filterSettings: { type:'Excel' },
+        allowSorting: true,
+        allowGrouping: true,
+        allowPaging: true,
+        columns: [
+                { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
+                { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
+                { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
+                { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
+        ],
 });
 grid.appendTo('#Grid');
 </script>
