--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <ul>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Sort, Filter, Group, Edit Using Local Data Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-grouping-sample.html">Grouping Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-filterbar-sample.html">Filterbar Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid/grid-dialog-edit-sample.html">Dialog Edit Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-sample-remote.html">Frozen Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample-remote.html">Virtual Scroll Using Remote Data Grid Sample</a></li>
 </ul>
