--- a/grid-infinite-scroll-sample-remote.html
+++ b/grid-infinite-scroll-sample-remote.html
@@ -36,6 +36,7 @@
         dataSource: data,
         height: 400,
         loadingIndicator: { indicatorType: 'Shimmer' },
+        enableVirtualMaskRow : true,
         allowFiltering: true,
         filterSettings: { type:'Excel' },
         allowSorting: true,
