--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Sort, Filter, Group, Edit Using Local Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-sample-remote.html">Frozen Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample-remote.html">Virtual Scroll Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample.html">Virtualization, Column Virtualization Grid Sample</a></li>
 </ul>
