--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-sample-remote.html">Frozen Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample.html">Virtualization, Column Virtualization Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-lazy-load-grouping-sample.html">Lazy Load Grouping Grid Sample</a></li>
 </ul>
