--- a/grid-lazy-load-grouping-sample.html
+++ b/grid-lazy-load-grouping-sample.html
@@ -26,25 +26,20 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Page, ej.grids.Edit, ej.grids.Toolbar);
-    
+    ej.grids.Grid.Inject(ej.grids.Page, ej.grids.Group, ej.grids.LazyLoadGroup);
     var grid = new ej.grids.Grid({
-        dataSource: data,
-        height: 400,
-        loadingIndicator: { indicatorType: 'Shimmer' },
-        allowFiltering: true,
-        filterSettings: { type:'Excel' },
-        allowSorting: true,
-        allowGrouping: true,
-        allowPaging: true,
-        editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
-        toolbar: ['Add', 'Edit', 'Delete', 'Update', 'Cancel', 'Search'],
-        columns: [
-                { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
-                { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
-                { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
-                { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
-        ],
+    dataSource: data,
+    allowPaging: true,
+    allowGrouping: true,
+    groupSettings: { enableLazyLoading: true, columns: ['ProductName', 'CustomerName'] },
+    columns: [
+        { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120 },
+        { field: 'ProductName', headerText: 'Product Name', width: 160 },
+        { field: 'ProductID', headerText: 'Product ID', textAlign: 'Right', width: 120 },
+        { field: 'CustomerID', headerText: 'Customer ID', width: 120 },
+        { field: 'CustomerName', headerText: 'Customer Name', width: 160 }
+    ],
+    height: 220
 });
 grid.appendTo('#Grid');
 </script>
