--- a/hierarchy-grid-sample.html
+++ b/hierarchy-grid-sample.html
@@ -54,6 +54,7 @@
             queryString: 'EmployeeID',
             allowPaging: true,
             loadingIndicator: { indicatorType: 'Shimmer' },
+            allowSorting: true,
             columns: [
                 { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120 },
                 { field: 'ShipCity', headerText: 'Ship City', width: 120 },
@@ -64,6 +65,7 @@
                 dataSource: dataManger2,
                 queryString: 'CustomerID',
                 loadingIndicator: { indicatorType: 'Shimmer' },
+                allowSorting: true,
                 columns: [
                     { field: 'CustomerID', headerText: 'Customer ID', textAlign: 'Right', width: 75 },
                     { field: 'Phone', headerText: 'Phone', width: 100 },
