--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>EJ2 Grid Mask Row Support</title>
 <h1>Test Samples</h1>
 <ul>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group Using Remote Data Grid Sample</a></li>
