--- a/stacked-header-grid-sample.html
+++ b/stacked-header-grid-sample.html
@@ -14,10 +14,13 @@
     
     <style>
       .e-grid .e-mask {
-      background-color: rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      height: 10px;
-      width: 80%;
+          background-color: rgba(0, 0, 0, 0.1);
+          display: inline-block;
+          height: 10px;
+          width: 80%;
+      }
+      .e-grid .e-altrow {
+        background-color: #fafafa;
       }
     </style>
 </head>
