--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>EJ2 Grid Mask Row Support</title>
 <h1>Test Samples</h1>
 <ul>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group, Column Reorder, Alt Row Color Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Sort, Filter, Group, Edit Using Local Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-sample-remote.html">Frozen Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
@@ -10,5 +10,4 @@
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-lazy-load-grouping-sample.html">Lazy Load Grouping Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/hierarchy-grid-sample.html">Hierarchy Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/stacked-header-grid-sample.html">Stacked Header Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-column-reorder-sample.html">Column Reorder Grid Sample</a></li>
 </ul>
