--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -19,6 +19,9 @@
       height: 10px;
       width: 80%;
       }
+      .e-grid .e-altrow {
+        background-color: #fafafa;
+      }
     </style>
 </head>
 <body>
