--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -28,7 +28,7 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Page);
+    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Page, ej.grids.Reorder);
     
     var data = new ej.data.DataManager({
     url: 'https://js.syncfusion.com/demos/ejServices/Wcf/Northwind.svc/Orders/',
@@ -44,6 +44,7 @@
         allowSorting: true,
         allowGrouping: true,
         allowPaging: true,
+        allowReordering: true,
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
                 { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
