--- a/grid-virtual-scroll-sample-spinner.html
+++ b/grid-virtual-scroll-sample-spinner.html
@@ -46,7 +46,7 @@
         dataSource: virtualData,
         height: 400,
         loadingIndicator: { indicatorType: 'Spinner' },
-        enableVirtualMaskRow : true,
+        enableVirtualMaskRow : false,
         enableVirtualization: true,
         enableColumnVirtualization: true,
         pageSettings: { pageSize: 50 },
