--- a/grid-frozen-sample-remote.html
+++ b/grid-frozen-sample-remote.html
@@ -41,6 +41,7 @@
         allowSorting: true,
         frozenRows: 3,
         enableInfiniteScrolling: true,
+        pageSettings: { pageSize: 50 },
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number', freeze: 'Left' },
                 { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
