--- a/grid-frozen-sample-remote.html
+++ b/grid-frozen-sample-remote.html
@@ -39,6 +39,7 @@
         allowFiltering: true,
         filterSettings: { type:'Excel' },
         allowSorting: true,
+        allowReordering: true,
         frozenRows: 3,
         enableInfiniteScrolling: true,
         pageSettings: { pageSize: 50 },
