--- a/grid-overall-sample-local.html
+++ b/grid-overall-sample-local.html
@@ -40,7 +40,7 @@
         editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
         toolbar: ['Add', 'Edit', 'Delete', 'Update', 'Cancel', 'Search'],
         columns: [
-                { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
+                { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number', isPrimaryKey: true },
                 { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
                 { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
                 { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
