--- a/grid-frozen-column-reorder-sample-remote.html
+++ b/grid-frozen-column-reorder-sample-remote.html
@@ -34,7 +34,7 @@
     });
     
     var grid = new ej.grids.Grid({
-        dataSource: data.slice,
+        dataSource: data,
         height: 300,
         loadingIndicator: { indicatorType: 'Shimmer' },
         allowFiltering: true,
