--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -14,11 +14,27 @@
     
     <style>
       .e-grid .e-mask {
-      background-color: rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      height: 10px;
-      width: 80%;
-      }
+          background-color: rgba(0, 0, 0, 0.1);
+          display: inline-block;
+          height: 10px;
+          width: 80%;
+        }
+        .e-grid .e-mask.e-mask-group-intent {
+          margin-left: 7px;
+          width: 16px;
+        }
+        .e-grid .e-mask.e-mask-detail-intent {
+          width: 16px;
+        }
+        .e-grid .e-mask.e-mask-checkbox-intent {
+          margin-left: 3px;
+          margin-right: 16px;
+          width: 20px;
+        }
+        .e-grid .e-mask.e-mask-drag-intent {
+          margin-left: 12px;
+          width: 12px;
+        }
       .e-grid .e-altrow {
         background-color: #fafafa;
       }
