--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -63,9 +63,9 @@
         allowReordering: true,
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
-                { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
+                { field: 'CustomerID', textAlign: 'Right', width: 140, headerText: 'Customer ID', type: 'string' },
                 { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
-                { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
+                { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd', textAlign: 'Right' }
         ],
 });
 grid.appendTo('#Grid');
