--- a/grid-overall-sample-local.html
+++ b/grid-overall-sample-local.html
@@ -19,24 +19,35 @@
           display: inline-block;
           height: 10px;
           width: 80%;
-      }
+        }
+        .e-grid .e-mask.e-mask-group-intent {
+          margin-left: 7px;
+          width: 16px;
+        }
+        .e-grid .e-mask.e-mask-detail-intent {
+          width: 16px;
+        }
+        .e-grid .e-mask.e-mask-checkbox-intent {
+          margin-left: 3px;
+          margin-right: 16px;
+          width: 20px;
+        }
+        .e-grid .e-mask.e-mask-drag-intent {
+          margin-left: 12px;
+          width: 12px;
+        }
     </style>
 </head>
 <body>
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.Page, ej.grids.Edit, ej.grids.Toolbar);
+    ej.grids.Grid.Inject(ej.grids.Edit, ej.grids.Toolbar, ej.grids.Aggregate);
     
     var grid = new ej.grids.Grid({
-        dataSource: data,
+        dataSource: data.slice(0, 20),
         height: 400,
         loadingIndicator: { indicatorType: 'Shimmer' },
-        allowFiltering: true,
-        filterSettings: { type:'Excel' },
-        allowSorting: true,
-        allowGrouping: true,
-        allowPaging: true,
         editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
         toolbar: ['Add', 'Edit', 'Delete', 'Update', 'Cancel', 'Search'],
         columns: [
@@ -45,6 +56,22 @@
                 { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
                 { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
         ],
+         aggregates: [{
+            columns: [{
+                type: 'Sum',
+                field: 'Freight',
+                format: 'C2',
+                footerTemplate: 'Sum: ${Sum}'
+            }]
+        },
+        {
+            columns: [{
+                type: 'Max',
+                field: 'Freight',
+                format: 'C2',
+                footerTemplate: 'Max: ${Max}'
+            }]
+        }]
 });
 grid.appendTo('#Grid');
 </script>
