--- a/grid-overall-sample-local.html
+++ b/grid-overall-sample-local.html
@@ -49,7 +49,7 @@
         height: 400,
         loadingIndicator: { indicatorType: 'Shimmer' },
         editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true },
-        toolbar: ['Add', 'Edit', 'Delete', 'Update', 'Cancel', 'Search'],
+        toolbar: ['Add', 'Edit', 'Delete', 'Update', 'Cancel'],
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number', isPrimaryKey: true },
                 { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
