--- a/grid-overall-sample-local.html
+++ b/grid-overall-sample-local.html
@@ -42,7 +42,7 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Edit, ej.grids.Toolbar, ej.grids.Aggregate);
+    ej.grids.Grid.Inject(ej.grids.Edit, ej.grids.Toolbar);
     
     var grid = new ej.grids.Grid({
         dataSource: data.slice(0, 20),
@@ -55,23 +55,7 @@
                 { field: 'CustomerID', width: 140, headerText: 'Customer ID', type: 'string' },
                 { field: 'Freight', headerText: 'Freight', textAlign: 'Right', width: 120, format: 'C' },
                 { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd' }
-        ],
-         aggregates: [{
-            columns: [{
-                type: 'Sum',
-                field: 'Freight',
-                format: 'C2',
-                footerTemplate: 'Sum: ${Sum}'
-            }]
-        },
-        {
-            columns: [{
-                type: 'Max',
-                field: 'Freight',
-                format: 'C2',
-                footerTemplate: 'Max: ${Max}'
-            }]
-        }]
+        ]
 });
 grid.appendTo('#Grid');
 </script>
