--- a/grid-frozen-column-reorder-sample-remote.html
+++ b/grid-frozen-column-reorder-sample-remote.html
@@ -67,7 +67,7 @@
                 { field: 'ShipPostalCode', headerText: 'ShipPostalCode', textAlign: 'Right', width: 120 },
                 { field: 'ShipName', headerText: 'Ship Name', textAlign: 'Right', width: 120, type: 'string' },
                 { field: 'ShipCountry', headerText: 'Ship Country', textAlign: 'Right', width: 120, type: 'string' },
-                { field: 'ShippedDate', headerText: 'Shipped Date', width: 140, format: 'yMd', freeze: 'Right' }
+                { field: 'ShippedDate', headerText: 'Shipped Date', width: 140, format: 'yMd', freeze: 'Right' },
                 { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd', freeze: 'Right' }
         ],
         aggregates: [{
