--- a/grid-frozen-column-reorder-sample-remote.html
+++ b/grid-frozen-column-reorder-sample-remote.html
@@ -66,8 +66,10 @@
                 { field: 'ShipVia', headerText: 'ShipVia', textAlign: 'Right', width: 120 },
                 { field: 'ShipPostalCode', headerText: 'ShipPostalCode', textAlign: 'Right', width: 120 },
                 { field: 'ShipName', headerText: 'Ship Name', textAlign: 'Right', width: 120, type: 'string' },
+                { field: 'ShipAddress', headerText: 'Ship Address', textAlign: 'Right', width: 120, type: 'string' },
                 { field: 'ShipCountry', headerText: 'Ship Country', textAlign: 'Right', width: 120, type: 'string' },
-                { field: 'ShippedDate', headerText: 'Shipped Date', width: 140, format: 'yMd', freeze: 'Right' },
+                { field: 'ShippedDate', headerText: 'Shipped Date', width: 140, format: 'yMd' },
+                { field: 'RequiredDate', headerText: 'Required Date', width: 140, format: 'yMd' }
                 { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd', freeze: 'Right' }
         ],
 });
