--- a/grid-frozen-column-reorder-sample-remote.html
+++ b/grid-frozen-column-reorder-sample-remote.html
@@ -69,7 +69,7 @@
                 { field: 'ShipAddress', headerText: 'Ship Address', textAlign: 'Right', width: 120, type: 'string' },
                 { field: 'ShipCountry', headerText: 'Ship Country', textAlign: 'Right', width: 120, type: 'string' },
                 { field: 'ShippedDate', headerText: 'Shipped Date', width: 140, format: 'yMd' },
-                { field: 'RequiredDate', headerText: 'Required Date', width: 140, format: 'yMd' }
+                { field: 'RequiredDate', headerText: 'Required Date', width: 140, format: 'yMd' },
                 { field: 'OrderDate', headerText: 'Order Date', width: 140, format: 'yMd', freeze: 'Right' }
         ],
 });
