--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <ul>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group, Paging, Column Reorder, Alt Row Color Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Edit Using Local Data Grid Sample</a></li>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-column-reorder-sample-remote.html">Frozen, Column Reorder Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-column-reorder-sample.html">Frozen, Column Reorder Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample.html">Virtualization, Column Virtualization Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-virtual-scroll-sample-spinner.html">Virtualization, Column Virtualization Grid Sample Using Spinner</a></li>
