--- a/grid-infinite-scroll-sample-remote.html
+++ b/grid-infinite-scroll-sample-remote.html
@@ -41,7 +41,7 @@
         <div id="Grid"></div>        
 
 <script >
-    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.InfiniteScroll);
+    ej.grids.Grid.Inject(ej.grids.Group, ej.grids.Sort, ej.grids.Filter, ej.grids.InfiniteScroll, ej.grids.Reorder);
     
     var data = new ej.data.DataManager({
     url: 'https://js.syncfusion.com/demos/ejServices/Wcf/Northwind.svc/Orders/',
@@ -58,6 +58,7 @@
         allowSorting: true,
         allowGrouping: true,
         enableInfiniteScrolling: true,
+        allowReordering: true,
         pageSettings: { pageSize: 50 },
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120, type: 'number' },
