--- a/grid-overall-sample-remote.html
+++ b/grid-overall-sample-remote.html
@@ -61,6 +61,7 @@
         allowGrouping: true,
         allowPaging: true,
         allowReordering: true,
+        rowHeight: 60,
         columns: [
                 { field: 'OrderID', headerText: 'Order ID', width: 120, type: 'number' },
                 { field: 'CustomerID', textAlign: 'Right', width: 140, headerText: 'Customer ID', type: 'string' },
