--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>EJ2 Grid Mask Row Support</title>
 <h1>Test Samples</h1>
 <ul>
-  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group, Paging, Column Reorder, Alt Row, Row Height Color Using Remote Data Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-remote.html">Sort, Filter, Group, Paging, Column Reorder, Alt Row Color, Row Height, Column Menu Using Remote Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-overall-sample-local.html">Edit, Aggregate Using Local Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-frozen-column-reorder-sample.html">Frozen, Column Reorder Data Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-infinite-scroll-sample-remote.html">Infinite Scroll Using Remote Data Grid Sample</a></li>
