--- a/hierarchy-grid-sample.html
+++ b/hierarchy-grid-sample.html
@@ -19,7 +19,23 @@
           display: inline-block;
           height: 10px;
           width: 80%;
-      }
+        }
+        .e-grid .e-mask.e-mask-group-intent {
+          margin-left: 7px;
+          width: 16px;
+        }
+        .e-grid .e-mask.e-mask-detail-intent {
+          width: 16px;
+        }
+        .e-grid .e-mask.e-mask-checkbox-intent {
+          margin-left: 3px;
+          margin-right: 16px;
+          width: 20px;
+        }
+        .e-grid .e-mask.e-mask-drag-intent {
+          margin-left: 12px;
+          width: 12px;
+        }
     </style>
 </head>
 <body>
