--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/grid-lazy-load-grouping-sample.html">Lazy Load Grouping Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/hierarchy-grid-sample.html">Hierarchy Grid Sample</a></li>
   <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/stacked-header-grid-sample.html">Stacked Header, Column Reorder Grid Sample</a></li>
+  <li><a href="https://hemanthkumar-syncfusion.github.io/ej2-grid-mask-row/column-spanning-grid-sample.html">Column Spanning Grid Sample</a></li>
 </ul>
