--- a/row-drag-and-drop-without-grid-sample.html
+++ b/row-drag-and-drop-without-grid-sample.html
@@ -50,6 +50,7 @@ var grid = new ej.grids.Grid({
     allowRowDragAndDrop: true,
     rowDropSettings: { targetID: 'DestGrid' },
     selectionSettings: { type: 'Multiple' },
+    loadingIndicator: { indicatorType: 'Shimmer' },
     columns: [
         { field: 'OrderID', headerText: 'Order ID', textAlign: 'Right', width: 120 },
         { field: 'CustomerID', headerText: 'Customer ID', width: 150 },
