--- a/column-spanning-grid-sample.html
+++ b/column-spanning-grid-sample.html
@@ -49,6 +49,7 @@
             queryCellInfo: QueryCellEvent,
             gridLines: 'Both',
             allowSorting: true,
+            loadingIndicator: { indicatorType: 'Shimmer' },
             columns: [
                 { field: 'EmployeeID', headerText: 'Employee ID', isPrimaryKey: true, textAlign: 'Right', width: 120 },
                 { field: 'EmployeeName', headerText: 'Employee Name', width: 200 },
